<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>gsrs-spring-boot-autoconfigure</module>
        <module>gsrs-spring-boot-starter</module>
        <module>gsrs-core</module>
        <module>gsrs-spring-legacy-indexer</module>
        <module>gsrs-core-entities</module>
        <module>gsrs-core-test</module>
        <module>gsrs-spring-starter-tests</module>
        <module>gsrs-spring-legacy-structure-indexer</module>
        <module>gsrs-discovery</module>
        <module>gsrs-spring-legacy-sequence-indexer</module>
        <module>gsrs-spring-legacy-cache</module>
        <module>gsrs-spring-akka</module>
        <module>gsrs-scheduled-tasks</module>
        <module>gsrs-rest-api</module>
        <module>gsrs-controlled-vocabulary-api</module>
        <module>gsrs-controlled-vocabulary</module>
        <module>gsrs-data-exchange</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <properties>
        <java.version>17</java.version>
        <gsrs.version>3.1.1-SNAPSHOT</gsrs.version>
        <spring-boot.version>3.2.2</spring-boot.version>
        <log4j2.version>2.22.1</log4j2.version>
    </properties>
    <groupId>gov.nih.ncats</groupId>
    <artifactId>gsrs-spring-boot</artifactId>
    <version>3.1.1-SNAPSHOT</version>
    <name>gsrs-starter</name>
    <description>Spring Starter for GSRS project</description>
    <url>https://github.com/ncats/gsrs-spring-starter</url>
    <scm>
        <url>https://github.com/ncats/gsrs-spring-starter.git</url>
    </scm>
    
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-logging</artifactId>
		</dependency>
	</dependencies>	

    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>

        <developer>
            <id>peryeata</id>
            <name>Tyler Peryea</name>
            <email>tyler.peryea@fda.hhs.gov</email>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>America/New_York</timezone>
        </developer>
        <developer>
            <id>katzelda</id>
            <name>Daniel Katzel</name>
            <email>daniel.katzel@nih.gov</email>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>America/New_York</timezone>
        </developer>
    </developers>

    <repositories>
        <repository>
            <id>oss.sonatype.org-snapshot</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>




</project>
